MB1917-Fix position of collapse all and select all icons in the header of QbGrid

--- a/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
+++ b/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
@@ -98,6 +98,16 @@ $edit-icon-font-size: 18px;
         text-align: center;
     }
 
+    .actionHeader {
+        display: flex;
+        align-items: center;
+
+        .selectRowCheckbox {
+            margin-top: 0;
+            flex: 1 1 auto;
+        }
+    }
+
     .gridHeaderCell {
         display: flex;
         align-items: center;
